# workshop-docker

./: app.py  instrucoes.txt  pyproject.toml
